force-app/main/default/objects/cgcloud__Sales_Organization__c/cgcloud__Sales_Organization__c.object-meta.xml
<CustomObject>
    <description>This Object holds the details of the Sales Organization.</description>
    <label>Sales Organization</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Organization</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>