force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Number__c</fullName>
    <description>Account number at the bank</description>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>