force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Account_Product_List_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Product_List_Type__c</fullName>
    <description>Defines which Product list has to be used</description>
    <inlineHelpText>Defines which Product List has to be used.</inlineHelpText>
    <label>Account Product List Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>global</fullName>
                <default>true</default>
                <label>global</label>
            </value>
            <value>
                <fullName>timedependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>