force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Accrual_Usage_Tag__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accrual_Usage_Tag__c</fullName>
    <description>Identifies Trade Promotion Management accrual data and related sales organization.</description>
    <label>Accrual Usage Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>