force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Accruals_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accruals_Start_Date__c</fullName>
    <description>Start date of accrual processing for this sales org</description>
    <label>Accrual Start Date</label>
    <type>Date</type>
</CustomField>