force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Additional_Custom_Period_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Additional_Custom_Period_Level__c</fullName>
    <label>Custom Periods for Months and Quarters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disabled</fullName>
                <default>true</default>
                <label>Disabled</label>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>