force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Automatic_Promotion_Push__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Automatic_Promotion_Push__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activates the auto push on leave of the promotion.</description>
    <inlineHelpText>Determines if the automatic promotion push is enabled for promotions.</inlineHelpText>
    <label>Automatic Promotion Push</label>
    <type>Checkbox</type>
</CustomField>