force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Available_Trade_Calendar_Color_Schemas__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Available_Trade_Calendar_Color_Schemas__c</fullName>
    <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
    <label>Available Trade Calendar Color Schemas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>