force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Bank__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Bank__c</fullName>
    <description>The bank used for payments</description>
    <label>Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>