force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Bank_Code__c</fullName>
    <description>Code of the bank</description>
    <label>Bank Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>