force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__BIN__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__BIN__c</fullName>
    <description>Bank Identification Number</description>
    <label>BIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>