force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__City__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__City__c</fullName>
    <description>Name of a city.</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>