force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Country__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Country__c</fullName>
    <description>Describes country.</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>