force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Currency__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Currency__c</fullName>
    <description>Currency used in the sales org.</description>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>RUB</fullName>
            </value>
            <value>
                <fullName>THB</fullName>
            </value>
            <value>
                <fullName>BRL</fullName>
            </value>
            <value>
                <fullName>MXN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>