force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Custom_Calendar__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Custom_Calendar__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Active custom calendar to which this Sales Organization is used.</description>
    <label>Custom Calendar</label>
    <referenceTo>cgcloud__Custom_Calendar__c</referenceTo>
    <relationshipLabel>Sales Organizations</relationshipLabel>
    <relationshipName>Sales_Organizations_Custom_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>