force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Custom_Calendar_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Custom_Calendar_Value__c</fullName>
    <description>Active custom calendar to which this Sales Organization is used.</description>
    <formula>HYPERLINK(&apos;/&apos;+ cgcloud__Custom_Calendar__r.Id ,  cgcloud__Custom_Calendar__r.Name)</formula>
    <label>Custom Calendar</label>
    <type>Text</type>
</CustomField>