force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Decimal_Places_For_Accruals__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Decimal_Places_For_Accruals__c</fullName>
    <description>Specifies the number of decimal places for accrual values.</description>
    <label>Decimal Places for Accruals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>