force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Default_Mobility_Visit_Color__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Mobility_Visit_Color__c</fullName>
    <description>Field to define the default color of visits on calendar on mobility device</description>
    <inlineHelpText>Please choose the color for the visit to display in the visit calendar</inlineHelpText>
    <label>Default Mobility Visit Calendar Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0176D3</fullName>
                <default>true</default>
                <label>0176D3</label>
            </value>
            <value>
                <fullName>EED2E0</fullName>
            </value>
            <value>
                <fullName>F7EBD9</fullName>
            </value>
            <value>
                <fullName>DDECD1</fullName>
            </value>
            <value>
                <fullName>D1DDEC</fullName>
            </value>
            <value>
                <fullName>6688BB</fullName>
            </value>
            <value>
                <fullName>EE9B38</fullName>
            </value>
            <value>
                <fullName>77AA99</fullName>
            </value>
            <value>
                <fullName>467596</fullName>
            </value>
            <value>
                <fullName>008899</fullName>
            </value>
            <value>
                <fullName>DD4411</fullName>
            </value>
            <value>
                <fullName>AA1133</fullName>
            </value>
            <value>
                <fullName>003344</fullName>
            </value>
            <value>
                <fullName>BBBB00</fullName>
            </value>
            <value>
                <fullName>551155</fullName>
            </value>
            <value>
                <fullName>FF7F50</fullName>
            </value>
            <value>
                <fullName>6495ED</fullName>
            </value>
            <value>
                <fullName>E9967A</fullName>
            </value>
            <value>
                <fullName>8FBC8F</fullName>
            </value>
            <value>
                <fullName>FFD700</fullName>
            </value>
            <value>
                <fullName>DAA520</fullName>
            </value>
            <value>
                <fullName>ADD8E6</fullName>
            </value>
            <value>
                <fullName>F08080</fullName>
            </value>
            <value>
                <fullName>FFA07A</fullName>
            </value>
            <value>
                <fullName>20B2AA</fullName>
            </value>
            <value>
                <fullName>87CEFA</fullName>
            </value>
            <value>
                <fullName>B0C4DE</fullName>
            </value>
            <value>
                <fullName>BC8F8F</fullName>
            </value>
            <value>
                <fullName>FA8072</fullName>
            </value>
            <value>
                <fullName>F4A460</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>