force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Default_Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Price_List_Type__c</fullName>
    <description>Default price list type of the sales organization</description>
    <label>Default Price List Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WS1999</fullName>
            </value>
            <value>
                <fullName>WS2000</fullName>
            </value>
            <value>
                <fullName>NotRelevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>