force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Default_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Price_Type__c</fullName>
    <description>Default price type of the sales organization.</description>
    <label>Default Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>factory</fullName>
            </value>
            <value>
                <fullName>consumer</fullName>
            </value>
            <value>
                <fullName>NotRelevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>