force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Default_Tactic_Fund_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Tactic_Fund_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default template used as a fallback if no fund template is selected in the tactic.</description>
    <label>Default Fund Template</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>cgcloud__Fund_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org_Value__c</field>
            <operation>equals</operation>
            <valueField>cgcloud__Fund_Template__c.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <infoMessage>Select the Default Fund Template</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Fund_Template__c</referenceTo>
    <relationshipLabel>Sales Organization</relationshipLabel>
    <relationshipName>Sales_Organization</relationshipName>
    <type>Lookup</type>
</CustomField>