force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Description_Language_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description_Language_3__c</fullName>
    <label>Description Language 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>