force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Distance_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distance_Unit__c</fullName>
    <description>Unit of distance used in the sales org.</description>
    <label>Distance Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>km</fullName>
                <default>true</default>
                <label>km</label>
            </value>
            <value>
                <fullName>miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>