force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__DMI_Product_List_Relevant_Measures__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__DMI_Product_List_Relevant_Measures__c</fullName>
    <description>Measure codes defined for dailymeasureint table</description>
    <label>Daily Measure Int</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>