force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Edits_On_Multiple_Time_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Edits_On_Multiple_Time_Level__c</fullName>
    <description>Enable monthly and quarterly time intervals for KPIs in CBPs, promotions, and account plans.</description>
    <inlineHelpText>Once enabled, KPI time intervals for months and quarters can&apos;t be disabled.</inlineHelpText>
    <label>View and Edit for Months and Quarters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disabled</fullName>
                <default>true</default>
                <label>Disabled</label>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>