force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Email__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Email__c</fullName>
    <description>Email address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>