force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Enable_Acc_Cat_WDS_Profile__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Acc_Cat_WDS_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the account, category, account and sales org specific profiles use the Profile bucket share calculation, which is found first.</description>
    <inlineHelpText>If enabled, the profile search order for daily volume distribution will be Customer Category --&gt; Customer (Account) --&gt; Sales Org.</inlineHelpText>
    <label>Enable Customer Category Profile</label>
    <type>Checkbox</type>
</CustomField>