force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Enable_Account_Plan_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Account_Plan_Scenarios__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if CBP includes Customer Business Plan Scenarios.</description>
    <inlineHelpText>If enabled, the CBP includes scenarios where the client can try out and compare different scenarios and promotion mixes.</inlineHelpText>
    <label>Enable Customer Business Plan Scenarios</label>
    <type>Checkbox</type>
</CustomField>