force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Enable_Account_Set_Search_in_TPC__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Account_Set_Search_in_TPC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox which enables/disables the account set search per salesorg.</description>
    <label>Enable Customer Set Search in TC</label>
    <type>Checkbox</type>
</CustomField>