force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Enable_Auto_Tactic_Fund_Assignment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Auto_Tactic_Fund_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the tacticfund assignment must be automatic.</description>
    <label>Enable Tactic Auto Fund Assignment</label>
    <type>Checkbox</type>
</CustomField>