force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Enable_Custom_Period_Labels__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Custom_Period_Labels__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Short Descriptions or generated labels should be used for custom periods.</description>
    <inlineHelpText>Displays labels of up to 10 characters to help identify Custom Periods in Trade Calendars, Promotion P&amp;L, and other TPM views.</inlineHelpText>
    <label>Enable Custom Period Labels</label>
    <type>Checkbox</type>
</CustomField>