force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Enable_Payment_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Payment_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the payment can be overwritten for the sales organization.</description>
    <inlineHelpText>Determines if the payment can be overwritten for the sales organization.</inlineHelpText>
    <label>Enable Payment Overwrite</label>
    <type>Checkbox</type>
</CustomField>