force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Enable_Sub_Account_Search_In_TPC__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Sub_Account_Search_In_TPC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Switchable sub account search filter.</description>
    <label>Enable Sub Account Search in TC</label>
    <type>Checkbox</type>
</CustomField>