force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Enable_Subperiod_Writeback__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Subperiod_Writeback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, it makes the writeback provide daily accurate values in the periods shared by two months (provided it is activated in the kpi definition).</description>
    <label>Enable Subperiod Writeback</label>
    <type>Checkbox</type>
</CustomField>