force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Enable_Subset_Load_Optimization__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Subset_Load_Optimization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the system uses KPI subset configurations for optimized loading of KPIs in promotion and account plan.</description>
    <inlineHelpText>Determines if the system uses KPI subset configurations for optimized loading of KPIs in promotion and account plan.</inlineHelpText>
    <label>Enable Subset Load Optimization</label>
    <type>Checkbox</type>
</CustomField>