force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Enable_Tactic_Condition_Creation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Tactic_Condition_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables condition creation for a tactic.</description>
    <label>Enable Tactic Condition Creation</label>
    <type>Checkbox</type>
</CustomField>