force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Fax__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fax__c</fullName>
    <description>Fax number</description>
    <label>Fax</label>
    <length>30</length>
    <type>Text</type>
</CustomField>