force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__First_Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__First_Day_Of_Week__c</fullName>
    <description>Describes the days of the week</description>
    <label>First Day Of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>