force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__First_Week_Of_Year__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__First_Week_Of_Year__c</fullName>
    <description>This field displays the week for call scheduling</description>
    <label>First Week Of Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>