force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Geofence_Distance__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Geofence_Distance__c</fullName>
    <defaultValue>0.5</defaultValue>
    <description>The maximum distance allowed for Geofencing. The default unit is Kilometers.</description>
    <label>Geofence Distance</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>