force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Global_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Global_Sales_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not use this field, This field is deprecated since 238.</description>
    <label>Global Sales Org</label>
    <type>Checkbox</type>
</CustomField>