force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Has_Activated_Business_Years__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Has_Activated_Business_Years__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the business years are activated for the sales org.</description>
    <label>Has Activated Business Years</label>
    <type>Checkbox</type>
</CustomField>