force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__IBAN__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__IBAN__c</fullName>
    <description>International Bank Account-Number</description>
    <label>IBAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>