force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Language_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Language_2__c</fullName>
    <description>Name of language 2 used in the sales org.</description>
    <label>Language 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>