force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Legal_Information__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Legal_Information__c</fullName>
    <description>Legal information to be shown on the print-outs</description>
    <label>Legal Information</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>