force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Lookback_Period_In_Years__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Lookback_Period_In_Years__c</fullName>
    <description>The products with an end date within the lookback period are selected for the calculation of account plan profit and loss and customer business plan.</description>
    <label>Lookback Period in Years</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>