force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Manual_Inputs_Off_Platform__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manual_Inputs_Off_Platform__c</fullName>
    <description>List of elements for which manual inputs are saved in Consumer Goods Processing Services.</description>
    <inlineHelpText>Saved choices are permanent. Carefully select the elements for which you want to enable manual inputs in Consumer Goods Processing Services.</inlineHelpText>
    <label>Manual Inputs in CGPS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBP</fullName>
                <label>Account Plan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>