force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__No__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__No__c</fullName>
    <description>House Number</description>
    <label>No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>