force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Phone__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Phone__c</fullName>
    <description>Phone Number</description>
    <label>Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>