force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__PM_Product_List_Relevant_Measures__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__PM_Product_List_Relevant_Measures__c</fullName>
    <description>Measure codes defined for productmeasure table</description>
    <label>Product Measure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COGS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>